crates/swc_ecma_react_compiler/tests/fixtures/upstream/preserve-memo-validation/error.validate-useMemo-named-function/error.txt
Found 1 error:

Error: Expected the first argument to be an inline function expression

Expected the first argument to be an inline function expression.

error.validate-useMemo-named-function.ts:9:20
   7 | // for now.
   8 | function Component(props) {
>  9 |   const x = useMemo(someHelper, []);
     |                     ^^^^^^^^^^ Expected the first argument to be an inline function expression
  10 |   return x;
  11 | }
  12 |
